Issue where on comp it shows one thing but on mobile its diff

--- a/style.css
+++ b/style.css
@@ -1558,7 +1558,7 @@ form input, form textarea {
       grid-row-end: 2;
   }
   .heroButton {
-    top: 25%;
+    top: 35%;
     left: 88%;
     font-size: 10px;
     padding: 6px 12px;
